// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`option: isApp = true 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.cjs": "<PROJECT_ROOT>/.eslintrc.cjs",
        ".husky/pre-commit": "<PROJECT_ROOT>/.husky/pre-commit",
        ".husky/pre-push": "<PROJECT_ROOT>/.husky/pre-push",
        ".lintstagedrc.cjs": "<PROJECT_ROOT>/.lintstagedrc.cjs",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.cjs": "<PROJECT_ROOT>/.prettierrc.cjs",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.cjs": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.cjs": false,
      },
      "files": Array [
        ".husky/pre-commit",
        ".husky/pre-push",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.cjs",
        ".eslintrc.cjs",
        ".prettierrc.cjs",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.cjs": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.cjs": false,
      },
    },
    "makeDirs": Array [
      ".husky",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint.cjs": "<PROJECT_ROOT>/lib/files/eslint.cjs",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.cjs": "<PROJECT_ROOT>/lib/files/lint-staged.cjs",
        "lib/files/prettier.cjs": "<PROJECT_ROOT>/lib/files/prettier.cjs",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.cjs",
        "lib/files/eslint.cjs",
        "lib/files/prettier.cjs",
      ],
      "hash": Object {
        "lib/files/editorconfig": "c8e06355ec368086c1313bda19033a9e5d8a920d27dbf91a97fc509a0d2d8e3b",
        "lib/files/eslint.cjs": "fdb4499d6fbf4441b57b0e540a981c0db9f58023d756278d41d79a9292a544d2",
        "lib/files/ignore": "cc67305578620b791ded1c8aed0f3c39db17c4643c760d09408e18eadb1d7a37",
        "lib/files/lint-staged.cjs": "bc49af6b82be36d6b1ef246bd20ce41a5726b59701584ad6fc57ce28c8ea6785",
        "lib/files/prettier.cjs": "105ba088ab96fe3b965231970dc8db9904de34ff9a9febff5a071d8220b74701",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "e4add719772b9da7940f03a22d607f8c8c86a543b9260739f9a8143b89007597",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "bd2849b7a84e41755e4c74b1a3d0640914f2cf1a1a4373640aa8d6308a3c53ee",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts --fix .",
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "resolve": Object {
    "@backtrack/preset-git-hooks": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib",
    "@backtrack/preset-style": "<PROJECT_ROOT>/lib",
  },
}
`;

exports[`option: node = true 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.cjs": "<PROJECT_ROOT>/.eslintrc.cjs",
        ".husky/pre-commit": "<PROJECT_ROOT>/.husky/pre-commit",
        ".husky/pre-push": "<PROJECT_ROOT>/.husky/pre-push",
        ".lintstagedrc.cjs": "<PROJECT_ROOT>/.lintstagedrc.cjs",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.cjs": "<PROJECT_ROOT>/.prettierrc.cjs",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.cjs": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.cjs": false,
      },
      "files": Array [
        ".husky/pre-commit",
        ".husky/pre-push",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.cjs",
        ".eslintrc.cjs",
        ".prettierrc.cjs",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.cjs": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.cjs": false,
      },
    },
    "makeDirs": Array [
      ".husky",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint-node.cjs": "<PROJECT_ROOT>/lib/files/eslint-node.cjs",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.cjs": "<PROJECT_ROOT>/lib/files/lint-staged.cjs",
        "lib/files/prettier.cjs": "<PROJECT_ROOT>/lib/files/prettier.cjs",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.cjs",
        "lib/files/eslint-node.cjs",
        "lib/files/prettier.cjs",
      ],
      "hash": Object {
        "lib/files/editorconfig": "c8e06355ec368086c1313bda19033a9e5d8a920d27dbf91a97fc509a0d2d8e3b",
        "lib/files/eslint-node.cjs": "00aed0fb026ab32804ce28d202a5e8ff43d5ef238ab938774c34b19fd6c1047b",
        "lib/files/ignore": "cc67305578620b791ded1c8aed0f3c39db17c4643c760d09408e18eadb1d7a37",
        "lib/files/lint-staged.cjs": "bc49af6b82be36d6b1ef246bd20ce41a5726b59701584ad6fc57ce28c8ea6785",
        "lib/files/prettier.cjs": "105ba088ab96fe3b965231970dc8db9904de34ff9a9febff5a071d8220b74701",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "e4add719772b9da7940f03a22d607f8c8c86a543b9260739f9a8143b89007597",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "bd2849b7a84e41755e4c74b1a3d0640914f2cf1a1a4373640aa8d6308a3c53ee",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts --fix .",
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "prepublishOnly": Array [
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "resolve": Object {
    "@backtrack/preset-git-hooks": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib",
    "@backtrack/preset-style": "<PROJECT_ROOT>/lib",
  },
}
`;

exports[`preset returns expected config no options 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.cjs": "<PROJECT_ROOT>/.eslintrc.cjs",
        ".husky/pre-commit": "<PROJECT_ROOT>/.husky/pre-commit",
        ".husky/pre-push": "<PROJECT_ROOT>/.husky/pre-push",
        ".lintstagedrc.cjs": "<PROJECT_ROOT>/.lintstagedrc.cjs",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.cjs": "<PROJECT_ROOT>/.prettierrc.cjs",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.cjs": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.cjs": false,
      },
      "files": Array [
        ".husky/pre-commit",
        ".husky/pre-push",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.cjs",
        ".eslintrc.cjs",
        ".prettierrc.cjs",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.cjs": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.cjs": false,
      },
    },
    "makeDirs": Array [
      ".husky",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint.cjs": "<PROJECT_ROOT>/lib/files/eslint.cjs",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.cjs": "<PROJECT_ROOT>/lib/files/lint-staged.cjs",
        "lib/files/prettier.cjs": "<PROJECT_ROOT>/lib/files/prettier.cjs",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.cjs",
        "lib/files/eslint.cjs",
        "lib/files/prettier.cjs",
      ],
      "hash": Object {
        "lib/files/editorconfig": "c8e06355ec368086c1313bda19033a9e5d8a920d27dbf91a97fc509a0d2d8e3b",
        "lib/files/eslint.cjs": "fdb4499d6fbf4441b57b0e540a981c0db9f58023d756278d41d79a9292a544d2",
        "lib/files/ignore": "cc67305578620b791ded1c8aed0f3c39db17c4643c760d09408e18eadb1d7a37",
        "lib/files/lint-staged.cjs": "bc49af6b82be36d6b1ef246bd20ce41a5726b59701584ad6fc57ce28c8ea6785",
        "lib/files/prettier.cjs": "105ba088ab96fe3b965231970dc8db9904de34ff9a9febff5a071d8220b74701",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "e4add719772b9da7940f03a22d607f8c8c86a543b9260739f9a8143b89007597",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "bd2849b7a84e41755e4c74b1a3d0640914f2cf1a1a4373640aa8d6308a3c53ee",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts --fix .",
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "prepublishOnly": Array [
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "resolve": Object {
    "@backtrack/preset-git-hooks": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib",
    "@backtrack/preset-style": "<PROJECT_ROOT>/lib",
  },
}
`;
